[gd_scene load_steps=8 format=3 uid="uid://cqe0p8qxm6khe"]

[ext_resource type="TileSet" uid="uid://dyd4siua4n4bj" path="res://tile_set.tres" id="1_bt3k5"]
[ext_resource type="Script" path="res://scripts/level_2.gd" id="1_le36p"]
[ext_resource type="PackedScene" uid="uid://ce1681knjeh47" path="res://skeleton.tscn" id="3_74s32"]
[ext_resource type="PackedScene" uid="uid://b86glwof054wu" path="res://goblin.tscn" id="4_q7tuc"]
[ext_resource type="PackedScene" uid="uid://c3006mys53cg1" path="res://shop.tscn" id="5_k080w"]
[ext_resource type="PackedScene" uid="uid://eywy18nlxka" path="res://player.tscn" id="6_giim8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x8vdm"]
size = Vector2(50, 64)

[node name="level_2" type="Node2D"]
script = ExtResource("1_le36p")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = ExtResource("1_bt3k5")
format = 2
layer_0/tile_data = PackedInt32Array(65549, 65538, 3, 65550, 196610, 0, 65551, 196610, 0, 65552, 196610, 0, 65553, 196610, 0, 65554, 196610, 0, 65555, 196610, 0, 65556, 196610, 0, 65557, 196610, 0, 65558, 196610, 0, 65559, 196610, 0, 65560, 196610, 0, 65561, 196610, 0, 131085, 65538, 0, 196621, 65538, 0, 262157, 65538, 1, 65562, 2, 0, 131098, 196610, 2, 196634, 196610, 2, 262170, 196610, 2, 327706, 196610, 2, 393242, 196610, 2, 458774, 65538, 2, 458775, 65538, 2, 458776, 65538, 2, 458777, 65538, 2, 524314, 65538, 0, 458778, 2, 1, 262156, 196610, 0, 262155, 196610, 0, 262154, 196610, 0, 262153, 196610, 0, 262152, 196610, 0, 262151, 196610, 0, 262150, 196610, 0, 458779, 196610, 0, 458780, 196610, 0, 458781, 196610, 0, 458782, 196610, 0, 458783, 196610, 0, 458784, 196610, 0, 1114125, 131074, 2, 1179661, 65538, 0, 1245197, 65538, 0, 851994, 65538, 0, 917530, 131074, 3, 983066, 196610, 2, 1048602, 196610, 2, 1114138, 196610, 2, 1179674, 196610, 2, 1245210, 196610, 2, 1114118, 65538, 2, 1114119, 65538, 2, 1114120, 65538, 2, 1114121, 65538, 2, 1114122, 65538, 2, 1114123, 65538, 2, 1114124, 65538, 2, 1310733, 2, 2, 1310734, 65538, 2, 917519, 131074, 0, 1310735, 65538, 2, 917520, 196610, 0, 1310736, 65538, 2, 917521, 196610, 0, 1310737, 65538, 2, 917522, 196610, 0, 1310738, 65538, 2, 917523, 196610, 0, 1310739, 65538, 2, 917524, 196610, 0, 1310740, 65538, 2, 917525, 196610, 0, 1310741, 65538, 2, 917526, 196610, 0, 1310742, 65538, 2, 917527, 196610, 0, 1310743, 65538, 2, 917528, 196610, 0, 1310744, 65538, 2, 917529, 196610, 0, 1310745, 65538, 2, 1310746, 196610, 3, 917531, 65538, 2, 917532, 65538, 2, 917533, 65538, 2, 917534, 65538, 2, 917535, 65538, 2, 917536, 65538, 2, 851983, 196610, 2, 786447, 2, 0, 786446, 196610, 0, 786445, 196610, 0, 786444, 196610, 0, 786458, 65538, 0, 589850, 65538, 0, 917537, 65538, 2, 917538, 65538, 2, 917539, 65538, 2, 458785, 196610, 0, 458786, 196610, 0, 458787, 196610, 0, 458790, 2, 0, 524326, 851970, 0, 589862, 851970, 1, 655398, 851970, 0, 720934, 851970, 2, 786470, 196610, 2, 852006, 196610, 2, 917542, 196610, 3, 458788, 196610, 0, 458789, 196610, 0, 917540, 65538, 2, 917541, 65538, 2, 1114116, 65538, 2, 1114117, 65538, 2, 262148, 196610, 0, 262149, 196610, 0, 262147, 65538, 3, 1114115, 2, 2, 327683, 65538, 0, 393219, 65538, 0, 458755, 65538, 0, 524291, 65538, 0, 589827, 65538, 0, 655363, 65538, 0, 720899, 65538, 0, 786435, 65538, 0, 851971, 65538, 0, 917507, 65538, 0, 983043, 65538, 0, 1048579, 65538, 0, 327684, 524288, 4, 327685, 655360, 4, 393221, 589824, 6, 393220, 524288, 5, 458756, 524288, 5, 458757, 589824, 6, 524293, 589824, 6, 589829, 589824, 6, 655365, 589824, 6, 720901, 589824, 6, 786437, 589824, 6, 851973, 589824, 6, 917509, 589824, 6, 983045, 589824, 6, 1048581, 589824, 7, 1048580, 524288, 7, 983044, 524288, 5, 917508, 524288, 5, 851972, 524288, 5, 786436, 524288, 5, 720900, 524288, 5, 655364, 524288, 5, 589828, 524288, 5, 524292, 524288, 5, 131097, 720896, 4, 852005, 720896, 7, 524325, 720896, 4, 983065, 720896, 4, 1245209, 720896, 7, 1245198, 524288, 7, 851995, 524288, 7, 131086, 524288, 4, 720922, 589824, 7, 655386, 655360, 4, 655387, 327680, 5, 720923, 327680, 6, 589851, 524288, 5, 524316, 655360, 4, 524315, 524288, 4, 589852, 589824, 6, 655388, 589824, 6, 720924, 589824, 6, 786460, 589824, 6, 851996, 589824, 7, 524317, 655360, 4, 589853, 589824, 6, 655389, 589824, 6, 720925, 589824, 6, 786461, 589824, 6, 851997, 589824, 7, 524318, 655360, 4, 589854, 589824, 6, 655390, 589824, 6, 720926, 589824, 6, 786462, 589824, 6, 851998, 589824, 7, 524319, 655360, 4, 589855, 589824, 6, 655391, 786432, 5, 720927, 589824, 6, 786463, 589824, 6, 851999, 589824, 7, 524320, 655360, 4, 589856, 589824, 6, 655392, 589824, 6, 720928, 589824, 6, 786464, 589824, 6, 852000, 589824, 7, 524321, 655360, 4, 589857, 589824, 6, 655393, 589824, 6, 720929, 589824, 6, 786465, 589824, 6, 852001, 589824, 7, 524322, 655360, 4, 589858, 589824, 6, 655394, 589824, 6, 720930, 589824, 6, 786466, 589824, 6, 852002, 589824, 7, 524323, 655360, 4, 589859, 589824, 6, 655395, 589824, 6, 720931, 589824, 6, 786467, 589824, 6, 852003, 589824, 7, 524324, 655360, 4, 589860, 786432, 5, 720932, 589824, 6, 786468, 589824, 6, 852004, 589824, 7, 786459, 524288, 5, 655397, 720896, 6, 720933, 720896, 6, 786469, 720896, 6, 589861, 589824, 5, 589836, 65538, 2, 655372, 655360, 4, 720908, 589824, 7, 589837, 65538, 2, 655373, 655360, 4, 720909, 589824, 7, 589838, 65538, 2, 655374, 655360, 4, 720910, 589824, 7, 458767, 196610, 1, 524303, 196610, 2, 589839, 196610, 3, 655375, 655360, 4, 720911, 589824, 7, 458768, 65538, 2, 458769, 65538, 2, 458770, 65538, 2, 458771, 65538, 2, 458772, 65538, 2, 458773, 65538, 2, 786448, 524288, 5, 851984, 524288, 7, 786449, 589824, 6, 851985, 589824, 7, 786450, 589824, 6, 851986, 589824, 7, 786451, 589824, 6, 851987, 589824, 7, 786452, 786432, 5, 851988, 589824, 7, 786453, 589824, 6, 851989, 589824, 7, 524310, 655360, 4, 589846, 589824, 6, 655382, 589824, 6, 720918, 786432, 5, 786454, 589824, 6, 851990, 589824, 7, 524311, 655360, 4, 589847, 589824, 6, 655383, 589824, 6, 720919, 589824, 6, 786455, 589824, 6, 851991, 589824, 7, 524312, 655360, 4, 589848, 589824, 6, 655384, 589824, 6, 720920, 589824, 6, 786456, 589824, 6, 851992, 589824, 7, 524313, 720896, 4, 589849, 720896, 6, 655385, 393216, 5, 720921, 393216, 6, 786457, 720896, 6, 851993, 720896, 7, 524307, 655360, 4, 524308, 655360, 4, 524309, 655360, 4, 524305, 655360, 4, 524306, 655360, 4, 589841, 589824, 6, 589842, 589824, 6, 655378, 589824, 6, 655379, 589824, 6, 655380, 786432, 5, 720916, 589824, 6, 720917, 589824, 6, 655381, 589824, 6, 589845, 786432, 5, 589844, 589824, 6, 589843, 589824, 6, 720915, 589824, 6, 720914, 589824, 6, 655377, 589824, 6, 720913, 589824, 6, 524304, 524288, 4, 589840, 524288, 5, 655376, 327680, 5, 720912, 327680, 6, 131088, 655360, 4, 196624, 589824, 6, 262160, 589824, 6, 327696, 589824, 6, 393232, 589824, 7, 131089, 655360, 4, 196625, 589824, 6, 262161, 589824, 6, 327697, 589824, 6, 393233, 589824, 7, 131090, 655360, 4, 196626, 589824, 6, 262162, 589824, 6, 327698, 786432, 5, 393234, 589824, 7, 131091, 655360, 4, 196627, 589824, 6, 262163, 589824, 6, 327699, 589824, 6, 393235, 589824, 7, 131092, 655360, 4, 196628, 589824, 6, 262164, 589824, 6, 327700, 589824, 6, 393236, 589824, 7, 131093, 655360, 4, 196629, 589824, 6, 262165, 589824, 6, 327701, 589824, 6, 393237, 589824, 7, 131094, 655360, 4, 196630, 589824, 6, 262166, 589824, 6, 327702, 589824, 6, 393238, 589824, 7, 131095, 655360, 4, 196631, 589824, 6, 262167, 589824, 6, 327703, 589824, 6, 393239, 589824, 7, 131096, 655360, 4, 196632, 589824, 6, 262168, 589824, 6, 327704, 589824, 6, 393240, 589824, 7, 196633, 720896, 6, 262169, 720896, 6, 327705, 720896, 6, 393241, 720896, 7, 131087, 655360, 4, 393231, 589824, 7, 196623, 589824, 6, 262159, 589824, 6, 327695, 589824, 6, 196622, 524288, 5, 262158, 524288, 5, 327694, 327680, 5, 327693, 655360, 4, 327692, 655360, 4, 327691, 655360, 4, 327690, 655360, 4, 327689, 655360, 4, 327688, 655360, 4, 327687, 655360, 4, 327686, 655360, 4, 393230, 393216, 6, 458766, 720896, 6, 524301, 589824, 7, 524302, 720896, 7, 393229, 589824, 6, 458765, 589824, 6, 393222, 589824, 6, 393223, 589824, 6, 393224, 589824, 6, 393225, 589824, 6, 393226, 589824, 6, 393227, 589824, 6, 393228, 589824, 6, 458764, 589824, 6, 458763, 589824, 6, 458762, 589824, 6, 458761, 589824, 6, 458760, 589824, 6, 458759, 589824, 6, 458758, 589824, 6, 1048582, 589824, 7, 1048583, 589824, 7, 1048584, 589824, 7, 1048585, 589824, 7, 1048586, 589824, 7, 1048587, 589824, 7, 1048588, 589824, 7, 1048589, 589824, 7, 655396, 589824, 6, 524299, 393216, 6, 524300, 589824, 7, 589835, 720896, 6, 655371, 393216, 5, 720907, 393216, 6, 786443, 720896, 6, 851980, 655360, 4, 851981, 655360, 4, 851982, 720896, 4, 917518, 720896, 6, 851979, 393216, 5, 524294, 589824, 6, 524295, 589824, 6, 524296, 786432, 5, 524297, 589824, 6, 524298, 589824, 6, 589834, 589824, 6, 589833, 786432, 5, 589832, 589824, 6, 589831, 589824, 6, 589830, 589824, 6, 655366, 589824, 6, 655367, 589824, 6, 655368, 589824, 6, 655369, 589824, 6, 655370, 589824, 6, 720906, 589824, 6, 720905, 589824, 6, 720904, 589824, 6, 720903, 589824, 6, 720902, 589824, 6, 786438, 786432, 5, 786439, 589824, 6, 786440, 589824, 6, 786441, 589824, 6, 786442, 589824, 6, 851978, 589824, 6, 851977, 589824, 6, 851976, 589824, 6, 851975, 589824, 6, 851974, 589824, 6, 917510, 589824, 6, 917511, 589824, 6, 917512, 589824, 6, 917513, 589824, 6, 917514, 589824, 6, 917515, 589824, 6, 917516, 589824, 6, 917517, 589824, 6, 983053, 589824, 6, 983052, 589824, 6, 983051, 589824, 6, 983050, 589824, 6, 983049, 589824, 6, 983048, 589824, 6, 983047, 589824, 6, 983046, 589824, 6, 1048590, 327680, 6, 1114126, 524288, 5, 1179662, 524288, 5, 1245199, 589824, 7, 1245200, 589824, 7, 1245201, 589824, 7, 1245202, 589824, 7, 1245203, 589824, 7, 1245204, 589824, 7, 1245205, 589824, 7, 1245206, 589824, 7, 1245207, 589824, 7, 1245208, 589824, 7, 1179673, 720896, 6, 1114137, 720896, 6, 1048601, 720896, 6, 983055, 655360, 4, 983056, 655360, 4, 983057, 655360, 4, 983058, 655360, 4, 983059, 655360, 4, 983060, 655360, 4, 983061, 655360, 4, 983062, 655360, 4, 983063, 655360, 4, 983064, 655360, 4, 983054, 393216, 5, 1048591, 589824, 6, 1048592, 589824, 6, 1048593, 589824, 6, 1048594, 589824, 6, 1048595, 589824, 6, 1048596, 589824, 6, 1048597, 786432, 5, 1048598, 589824, 6, 1048599, 589824, 6, 1048600, 589824, 6, 1114136, 589824, 6, 1114135, 589824, 6, 1114134, 589824, 6, 1114133, 589824, 6, 1114132, 589824, 6, 1114131, 589824, 6, 1114130, 589824, 6, 1114129, 589824, 6, 1114128, 589824, 6, 1114127, 589824, 6, 1179663, 589824, 6, 1179664, 589824, 6, 1179665, 589824, 6, 1179666, 589824, 6, 1179667, 589824, 6, 1179668, 786432, 5, 1179669, 589824, 6, 1179670, 589824, 6, 1179671, 589824, 6, 1179672, 589824, 6, 13, 458754, 10, 14, 327682, 10, 15, 327682, 10, 16, 458754, 10, 17, 327682, 10, 18, 458754, 10, 19, 393218, 10, 20, 458754, 10, 21, 393218, 10, 22, 393218, 10, 23, 393218, 10, 24, 458754, 10, 25, 393218, 10, 393244, 327682, 10, 393245, 458754, 10, 393246, 327682, 10, 393247, 393218, 10, 393248, 393218, 10, 393249, 458754, 10, 393250, 327682, 10, 393251, 327682, 10, 393252, 458754, 10, 393253, 458754, 10, 196612, 327682, 10, 196613, 458754, 10, 196614, 393218, 10, 196615, 458754, 10, 196616, 458754, 10, 196617, 458754, 10, 196618, 458754, 10, 196619, 327682, 10, 27, 2, 10, 26, 327682, 10, 458791, 327682, 11, 524327, 393218, 11, 589863, 393218, 11, 655399, 327682, 11, 720935, 327682, 11, 786471, 458754, 11, 852007, 393218, 11, 1048603, 393218, 11, 1114139, 458754, 11, 1179675, 458754, 11, 1245211, 458754, 11, 65563, 393218, 11, 131099, 393218, 11, 196635, 458754, 11, 262171, 458754, 11, 327707, 458754, 11, 393243, 131074, 10, 393255, 2, 10, 393254, 393218, 10, 983068, 327682, 13, 983069, 458754, 13, 983070, 327682, 13, 983071, 393218, 13, 983072, 393218, 13, 983073, 393218, 13, 983074, 393218, 13, 983075, 393218, 13, 983076, 458754, 13, 983077, 393218, 13, 983078, 327682, 13, 1179652, 327682, 13, 1179653, 458754, 13, 1179654, 393218, 13, 1179655, 458754, 13, 1179656, 327682, 13, 1179657, 458754, 13, 1179658, 458754, 13, 1179659, 458754, 13, 1376269, 393218, 13, 1376270, 327682, 13, 1376271, 393218, 13, 1376272, 327682, 13, 1376273, 458754, 13, 1376274, 393218, 13, 1376275, 458754, 13, 1376276, 327682, 13, 1376277, 327682, 13, 1376278, 393218, 13, 1376279, 327682, 13, 1376280, 393218, 13, 1376281, 327682, 13, 1376282, 327682, 13, 12, 65538, 13, 65548, 458754, 12, 131084, 327682, 12, 262146, 327682, 12, 327682, 458754, 12, 393218, 458754, 12, 458754, 393218, 12, 524290, 393218, 12, 589826, 393218, 12, 655362, 327682, 12, 720898, 458754, 12, 786434, 327682, 12, 851970, 393218, 12, 917506, 393218, 12, 983042, 458754, 12, 1048578, 327682, 12, 1114114, 327682, 12, 1179650, 2, 12, 1179651, 393218, 13, 1179660, 131074, 12, 1376268, 2, 12, 1245196, 327682, 12, 1310732, 393218, 12, 1376283, 196610, 13, 1310747, 327682, 11, 983067, 196610, 11, 983079, 196610, 13, 917543, 458754, 11, 196620, 65538, 11, 196610, 65538, 13, 196611, 393218, 10, -65537, 589825, 7, -1, 589825, 7, 65535, 589825, 7, 131071, 589825, 7, 196607, 589825, 7, -131072, 589825, 7, -65536, 589825, 7, 0, 589825, 7, 65536, 589825, 7, 131072, 589825, 7, -131071, 589825, 7, -65535, 589825, 7, 1, 589825, 7, 65537, 589825, 7, 131073, 589825, 7, -131070, 589825, 7, -65534, 589825, 7, 2, 589825, 7, 65538, 589825, 7, 131074, 589825, 7, -131069, 589825, 7, -65533, 589825, 7, 3, 589825, 7, 65539, 589825, 7, 131075, 589825, 7, -131068, 589825, 7, -65532, 589825, 7, 4, 589825, 7, 65540, 589825, 7, 131076, 589825, 7, -131067, 589825, 7, -65531, 589825, 7, 5, 589825, 7, 65541, 589825, 7, 131077, 589825, 7, -131066, 589825, 7, -65530, 589825, 7, 6, 589825, 7, 65542, 589825, 7, 131078, 589825, 7, -131065, 589825, 7, -65529, 589825, 7, 7, 589825, 7, 65543, 589825, 7, 131079, 589825, 7, -131064, 589825, 7, -65528, 589825, 7, 8, 589825, 7, 65544, 589825, 7, 131080, 589825, 7, -131063, 589825, 7, -65527, 589825, 7, 9, 589825, 7, 65545, 589825, 7, 131081, 589825, 7, -131062, 589825, 7, -65526, 589825, 7, 10, 589825, 7, 65546, 589825, 7, 131082, 589825, 7, -131061, 589825, 7, -65525, 589825, 7, 11, 589825, 7, 65547, 589825, 7, 131083, 589825, 7, -131060, 589825, 7, -65524, 589825, 7, -131059, 589825, 7, -65523, 589825, 7, -131058, 589825, 7, -65522, 589825, 7, -131057, 589825, 7, -65521, 589825, 7, -131056, 589825, 7, -65520, 589825, 7, -131055, 589825, 7, -65519, 589825, 7, -131054, 589825, 7, -65518, 589825, 7, -131053, 589825, 7, -65517, 589825, 7, -131052, 589825, 7, -65516, 589825, 7, -131051, 589825, 7, -65515, 589825, 7, -131050, 589825, 7, -65514, 589825, 7, -131049, 589825, 7, -65513, 589825, 7, -131048, 589825, 7, -65512, 589825, 7, -131047, 589825, 7, -65511, 589825, 7, -131046, 589825, 7, -65510, 589825, 7, -131045, 589825, 7, -65509, 589825, 7, -131044, 589825, 7, -65508, 589825, 7, -131043, 589825, 7, -65507, 589825, 7, -131042, 589825, 7, -65506, 589825, 7, -131041, 589825, 7, -65505, 589825, 7, -131040, 589825, 7, -65504, 589825, 7, -131039, 589825, 7, -65503, 589825, 7, -131038, 589825, 7, -65502, 589825, 7, -131037, 589825, 7, -65501, 589825, 7, -131036, 589825, 7, -65500, 589825, 7, -131035, 589825, 7, -65499, 589825, 7, -131034, 589825, 7, -65498, 589825, 7, -131033, 589825, 7, -65497, 589825, 7, -131032, 589825, 7, -65496, 589825, 7, -131031, 589825, 7, -65495, 589825, 7, 28, 589825, 7, 65564, 589825, 7, 131100, 589825, 7, 196636, 589825, 7, 262172, 589825, 7, 327708, 589825, 7, 29, 589825, 7, 65565, 589825, 7, 131101, 589825, 7, 196637, 589825, 7, 262173, 589825, 7, 327709, 589825, 7, 30, 589825, 7, 65566, 589825, 7, 131102, 589825, 7, 196638, 589825, 7, 262174, 589825, 7, 327710, 589825, 7, 31, 589825, 7, 65567, 589825, 7, 131103, 589825, 7, 196639, 589825, 7, 262175, 589825, 7, 327711, 589825, 7, 32, 589825, 7, 65568, 589825, 7, 131104, 589825, 7, 196640, 589825, 7, 262176, 589825, 7, 327712, 589825, 7, 33, 589825, 7, 65569, 589825, 7, 131105, 589825, 7, 196641, 589825, 7, 262177, 589825, 7, 327713, 589825, 7, 34, 589825, 7, 65570, 589825, 7, 131106, 589825, 7, 196642, 589825, 7, 262178, 589825, 7, 327714, 589825, 7, 35, 589825, 7, 65571, 589825, 7, 131107, 589825, 7, 196643, 589825, 7, 262179, 589825, 7, 327715, 589825, 7, 36, 589825, 7, 65572, 589825, 7, 131108, 589825, 7, 196644, 589825, 7, 262180, 589825, 7, 327716, 589825, 7, 37, 589825, 7, 65573, 589825, 7, 131109, 589825, 7, 196645, 589825, 7, 262181, 589825, 7, 327717, 589825, 7, 38, 589825, 7, 65574, 589825, 7, 131110, 589825, 7, 196646, 589825, 7, 262182, 589825, 7, 327718, 589825, 7, 39, 589825, 7, 65575, 589825, 7, 131111, 589825, 7, 196647, 589825, 7, 262183, 589825, 7, 327719, 589825, 7, 40, 589825, 7, 65576, 589825, 7, 131112, 589825, 7, 196648, 589825, 7, 262184, 589825, 7, 327720, 589825, 7, 41, 589825, 7, 65577, 589825, 7, 131113, 589825, 7, 196649, 589825, 7, 262185, 589825, 7, 327721, 589825, 7, 393256, 589825, 7, 458792, 589825, 7, 524328, 589825, 7, 589864, 589825, 7, 655400, 589825, 7, 720936, 589825, 7, 786472, 589825, 7, 852008, 589825, 7, 917544, 589825, 7, 983080, 589825, 7, 1048616, 589825, 7, 1114152, 589825, 7, 1179688, 589825, 7, 1245224, 589825, 7, 1310760, 589825, 7, 1376296, 589825, 7, 1441832, 589825, 7, 393257, 589825, 7, 458793, 589825, 7, 524329, 589825, 7, 589865, 589825, 7, 655401, 589825, 7, 720937, 589825, 7, 786473, 589825, 7, 852009, 589825, 7, 917545, 589825, 7, 983081, 589825, 7, 1048617, 589825, 7, 1114153, 589825, 7, 1179689, 589825, 7, 1245225, 589825, 7, 1310761, 589825, 7, 1376297, 589825, 7, 1441833, 589825, 7, 262142, 589825, 7, 327678, 589825, 7, 393214, 589825, 7, 458750, 589825, 7, 524286, 589825, 7, 589822, 589825, 7, 655358, 589825, 7, 720894, 589825, 7, 786430, 589825, 7, 851966, 589825, 7, 917502, 589825, 7, 983038, 589825, 7, 1048574, 589825, 7, 1114110, 589825, 7, 1179646, 589825, 7, 1245182, 589825, 7, 1310718, 589825, 7, 1376254, 589825, 7, 1441790, 589825, 7, 1507326, 589825, 7, 1572862, 589825, 7, 262143, 589825, 7, 327679, 589825, 7, 393215, 589825, 7, 458751, 589825, 7, 524287, 589825, 7, 589823, 589825, 7, 655359, 589825, 7, 720895, 589825, 7, 786431, 589825, 7, 851967, 589825, 7, 917503, 589825, 7, 983039, 589825, 7, 1048575, 589825, 7, 1114111, 589825, 7, 1179647, 589825, 7, 1245183, 589825, 7, 1310719, 589825, 7, 1376255, 589825, 7, 1441791, 589825, 7, 1507327, 589825, 7, 1572863, 589825, 7, 196608, 589825, 7, 262144, 589825, 7, 327680, 589825, 7, 393216, 589825, 7, 458752, 589825, 7, 524288, 589825, 7, 589824, 589825, 7, 655360, 589825, 7, 720896, 589825, 7, 786432, 589825, 7, 851968, 589825, 7, 917504, 589825, 7, 983040, 589825, 7, 1048576, 589825, 7, 1114112, 589825, 7, 1179648, 589825, 7, 1245184, 589825, 7, 1310720, 589825, 7, 1376256, 589825, 7, 1441792, 589825, 7, 1507328, 589825, 7, 196609, 589825, 7, 262145, 589825, 7, 327681, 589825, 7, 393217, 589825, 7, 458753, 589825, 7, 524289, 589825, 7, 589825, 589825, 7, 655361, 589825, 7, 720897, 589825, 7, 786433, 589825, 7, 851969, 589825, 7, 917505, 589825, 7, 983041, 589825, 7, 1048577, 589825, 7, 1114113, 589825, 7, 1179649, 589825, 7, 1245185, 589825, 7, 1310721, 589825, 7, 1376257, 589825, 7, 1441793, 589825, 7, 1507329, 589825, 7, 1245186, 589825, 7, 1310722, 589825, 7, 1376258, 589825, 7, 1441794, 589825, 7, 1507330, 589825, 7, 1245187, 589825, 7, 1310723, 589825, 7, 1376259, 589825, 7, 1441795, 589825, 7, 1507331, 589825, 7, 1245188, 589825, 7, 1310724, 589825, 7, 1376260, 589825, 7, 1441796, 589825, 7, 1507332, 589825, 7, 1245189, 589825, 7, 1310725, 589825, 7, 1376261, 589825, 7, 1441797, 589825, 7, 1507333, 589825, 7, 1245190, 589825, 7, 1310726, 589825, 7, 1376262, 589825, 7, 1441798, 589825, 7, 1507334, 589825, 7, 1245191, 589825, 7, 1310727, 589825, 7, 1376263, 589825, 7, 1441799, 589825, 7, 1507335, 589825, 7, 1245192, 589825, 7, 1310728, 589825, 7, 1376264, 589825, 7, 1441800, 589825, 7, 1507336, 589825, 7, 1245193, 589825, 7, 1310729, 589825, 7, 1376265, 589825, 7, 1441801, 589825, 7, 1507337, 589825, 7, 1245194, 589825, 7, 1310730, 589825, 7, 1376266, 589825, 7, 1441802, 589825, 7, 1507338, 589825, 7, 1245195, 589825, 7, 1310731, 589825, 7, 1376267, 589825, 7, 1441803, 589825, 7, 1507339, 589825, 7, 1441804, 589825, 7, 1507340, 589825, 7, 1441805, 589825, 7, 1507341, 589825, 7, 1441806, 589825, 7, 1507342, 589825, 7, 1441807, 589825, 7, 1507343, 589825, 7, 1441808, 589825, 7, 1507344, 589825, 7, 1441809, 589825, 7, 1507345, 589825, 7, 1441810, 589825, 7, 1507346, 589825, 7, 1441811, 589825, 7, 1507347, 589825, 7, 1441812, 589825, 7, 1507348, 589825, 7, 1441813, 589825, 7, 1507349, 589825, 7, 1441814, 589825, 7, 1507350, 589825, 7, 1441815, 589825, 7, 1507351, 589825, 7, 1441816, 589825, 7, 1507352, 589825, 7, 1441817, 589825, 7, 1507353, 589825, 7, 1441818, 589825, 7, 1507354, 589825, 7, 1441819, 589825, 7, 1507355, 589825, 7, 1441820, 589825, 7, 1507356, 589825, 7, 1441821, 589825, 7, 1507357, 589825, 7, 1441822, 589825, 7, 1507358, 589825, 7, 1441823, 589825, 7, 1507359, 589825, 7, 1441824, 589825, 7, 1507360, 589825, 7, 1441825, 589825, 7, 1507361, 589825, 7, 1441826, 589825, 7, 1507362, 589825, 7, 1441827, 589825, 7, 1507363, 589825, 7, 1441828, 589825, 7, 1507364, 589825, 7, 1441829, 589825, 7, 1507365, 589825, 7, 1441830, 589825, 7, 1507366, 589825, 7, 1441831, 589825, 7, 1507367, 589825, 7, 1507368, 589825, 7, 1507369, 589825, 7, 1048604, 589825, 7, 1114140, 589825, 7, 1179676, 589825, 7, 1245212, 589825, 7, 1310748, 589825, 7, 1376284, 589825, 7, 1048605, 589825, 7, 1114141, 589825, 7, 1179677, 589825, 7, 1245213, 589825, 7, 1310749, 589825, 7, 1376285, 589825, 7, 1048606, 589825, 7, 1114142, 589825, 7, 1179678, 589825, 7, 1245214, 589825, 7, 1310750, 589825, 7, 1376286, 589825, 7, 1048607, 589825, 7, 1114143, 589825, 7, 1179679, 589825, 7, 1245215, 589825, 7, 1310751, 589825, 7, 1376287, 589825, 7, 1048608, 589825, 7, 1114144, 589825, 7, 1179680, 589825, 7, 1245216, 589825, 7, 1310752, 589825, 7, 1376288, 589825, 7, 1048609, 589825, 7, 1114145, 589825, 7, 1179681, 589825, 7, 1245217, 589825, 7, 1310753, 589825, 7, 1376289, 589825, 7, 1048610, 589825, 7, 1114146, 589825, 7, 1179682, 589825, 7, 1245218, 589825, 7, 1310754, 589825, 7, 1376290, 589825, 7, 1048611, 589825, 7, 1114147, 589825, 7, 1179683, 589825, 7, 1245219, 589825, 7, 1310755, 589825, 7, 1376291, 589825, 7, 1048612, 589825, 7, 1114148, 589825, 7, 1179684, 589825, 7, 1245220, 589825, 7, 1310756, 589825, 7, 1376292, 589825, 7, 1048613, 589825, 7, 1114149, 589825, 7, 1179685, 589825, 7, 1245221, 589825, 7, 1310757, 589825, 7, 1376293, 589825, 7, 1048614, 589825, 7, 1114150, 589825, 7, 1179686, 589825, 7, 1245222, 589825, 7, 1310758, 589825, 7, 1376294, 589825, 7, 1048615, 589825, 7, 1114151, 589825, 7, 1179687, 589825, 7, 1245223, 589825, 7, 1310759, 589825, 7, 1376295, 589825, 7)

[node name="enemies" type="Node2D" parent="."]

[node name="Skeleton1" parent="enemies" instance=ExtResource("3_74s32")]
position = Vector2(1220, 480)

[node name="Skeleton2" parent="enemies" instance=ExtResource("3_74s32")]
position = Vector2(1220, 560)

[node name="Skeleton3" parent="enemies" instance=ExtResource("3_74s32")]
position = Vector2(900, 520)

[node name="Goblin1" parent="enemies" instance=ExtResource("4_q7tuc")]
position = Vector2(900, 210)

[node name="Goblin2" parent="enemies" instance=ExtResource("4_q7tuc")]
position = Vector2(900, 830)

[node name="Goblin3" parent="enemies" instance=ExtResource("4_q7tuc")]
position = Vector2(685, 290)

[node name="Goblin4" parent="enemies" instance=ExtResource("4_q7tuc")]
position = Vector2(685, 765)

[node name="door" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door"]
position = Vector2(1848, 453)
shape = SubResource("RectangleShape2D_x8vdm")

[node name="shop" parent="." instance=ExtResource("5_k080w")]
position = Vector2(1568, 438)

[node name="Player" parent="." instance=ExtResource("6_giim8")]
position = Vector2(317, 547)

[connection signal="body_entered" from="door" to="." method="_on_door_body_entered"]
